--- a/contact.css
+++ b/contact.css
@@ -285,6 +285,11 @@ nav>h4{
       
     }
 
+    @media  screen and (max-width:350px){
+        .contact h1{
+            font-size: 4.5rem;
+        }
+    }
     @media screen and (max-width:450px) {
         #page1-content nav h3{
             font-size: 2vh;
