--- a/services.css
+++ b/services.css
@@ -806,6 +806,7 @@ nav{
    
 }
 
+
 @media screen and (max-width:450px){
     .first_part_menu{
         height: 22vh;
@@ -847,7 +848,18 @@ nav{
         font-size: 2vh;
         padding-top: 2.5vh;
     }
-
+     .text-area h1{
+        margin-left: 2vh;
+        
+     }
+     .text-area-hover h1{
+        margin-left: 1.8vh;
+        margin-bottom: 5vh;
+     }
+     .text-area-hover h2{
+        
+        margin-bottom: 4.5vh;
+     }
     .content-2{
         height: 60vh;
 
