--- a/contact.css
+++ b/contact.css
@@ -10,8 +10,6 @@
 *{
     margin: 0;
     padding: 0;
-    cursor: url("./cursor.png"), auto;
-   
     box-sizing: border-box;
 }
 
@@ -20,11 +18,13 @@
 body{
     scroll-behavior: smooth;
     width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    height: 100vh;
     background-color: #050404;
 }
-
+.space{
+    height: 100vh;
+    width: 100%;
+}
 .loader{
     height: 100vh;
     width: 100%;
@@ -39,11 +39,16 @@ body{
 }
 
 .contact{
+
     font-size: 8rem;
    margin-bottom: 18vw;
    font-family: rejoy;
 }
-
+.secPhone,
+.phoneNumber{
+    position: relative;
+    z-index: 10;
+}
 
 #page1{
     position: relative;
@@ -327,7 +332,7 @@ nav>h4{
         #menu>nav{
             font-size: 4vw;
         }
-        
+
       
     }
 
@@ -340,6 +345,7 @@ nav>h4{
     gap: 20px;
     font-family: "Josefin Sans", sans-serif;
     font-size: 20px;
+    z-index: 9999;
   }
   .secPhone {
     width: 200px;
