--- a/contact.css
+++ b/contact.css
@@ -228,114 +228,6 @@ nav>h4{
     font-family: rejoy;
 }
 
-
-
-
-
-
-
-
-
-
-    @media screen and (max-width:900px) {
-        #main{
-            overflow: hidden;
-        }
-    }
-
-
-
-    @media screen and (max-width:700px) {
-
-        h1{
-            font-size: 6.4rem;
-            margin: 1.5rem;
-        }
-        .loader{
-            height: 100vh;
-        }
-
-        nav>h3{
-            font-size: 3.5vw;
-        }
-
-        nav>h4{
-            font-size: 3.5vw;
-        }
-
-        .upper-part-page2>div>h1{
-            font-size: 2.8vw;
-        }
-
-        .upper-part-page2>h1{
-            font-size: 2.8vw;
-        }
-
-        #main{
-            width: 100%;
-            overflow: hidden;
-        }
-        #page1 {
-
-
-            width: 100%;
-            height: 60vh;
-
-        }
-
-        .cursor{
-            display: none;
-        }
-
-      
-    }
-
-    @media  screen and (max-width:350px){
-        .contact h1{
-            font-size: 4.5rem;
-        }
-    }
-    @media screen and (max-width:450px) {
-        #page1-content nav h3{
-            font-size: 2vh;
-            padding-top: 2.5vh;
-        }
-        #page1-content nav h4{
-            font-size: 2vh;
-            padding-top: 2.5vh;
-        }
-        .first_part_menu{
-            height: 22vh;
-            width: 37vh;
-        }
-        .menu_second_part{
-            flex-direction: column;
-         padding-left: 0rem;
-         padding-right: 0rem;
-        }
-
-        .second_part_menu{
-            display: flex;
-        }
-
-        .second_part_menu>li{
-            padding: .5rem .2rem;
-        }
-
-        #menu>hr{
-            margin-top: 0rem;
-        }
-        .menu_lower_part>h1{
-            font-size: 2.8vw;
-        }
-
-        #menu>nav{
-            font-size: 4vw;
-        }
-
-      
-    }
-
     
 .secContact {
     display: flex;
@@ -457,3 +349,157 @@ nav>h4{
     scale: 0.9;
   }
   
+
+
+
+
+
+
+
+
+    @media screen and (max-width:900px) {
+        #main{
+            overflow: hidden;
+        }
+    }
+
+
+
+    @media screen and (max-width:700px) {
+
+        h1{
+            font-size: 3.7rem;
+            margin: 1.5rem;
+        }
+        .loader{
+            height: 100vh;
+        }
+
+        nav>h3{
+            font-size: 3.5vw;
+        }
+
+        nav>h4{
+            font-size: 3.5vw;
+        }
+       
+        .upper-part-page2>div>h1{
+            font-size: 2.8vw;
+        }
+
+        .upper-part-page2>h1{
+            font-size: 2.8vw;
+        }
+        .secMail {
+            width: 150px;
+            height: 30px;
+            
+        }
+        .mail{
+            width: 20px;
+            height: 20px;
+        }
+        .msg {
+            font-size: 1.0rem;
+        }
+       .social{
+        width: 6vh;
+        height: 6vh;
+       }
+        .secPhone{
+            width: 150px;
+            height: 30px;
+        }
+        .secPhone::after {
+            content: "";
+            position: absolute;
+            width: 103px;
+            height: 24px;
+            margin: 0 3px 0 42px;
+            border-radius: 8px;
+            background-color: black;
+          }
+          .phone {
+            width: 20px;
+            height: 20px;
+            margin-left: 9px;
+            margin-right: 10px;
+            background: url("./icon-whatsapp-50.png") no-repeat;
+            background-size: cover;
+            z-index: 10;
+          }
+          .secPhone:hover {
+            box-shadow: 0px 0 15px 0 #00bf63;
+            font-weight: bolder;
+          }
+        
+          .secPhone:active {
+            scale: 0.8;
+          }
+          .phoneNumber {
+            z-index: 10;
+            font-size: 1.16rem;
+            margin-left: 3px;
+          }
+        #main{
+            width: 100%;
+            overflow: hidden;
+        }
+        #page1 {
+
+
+            width: 100%;
+            height: 60vh;
+
+        }
+
+        .cursor{
+            display: none;
+        }
+
+      
+    }
+
+ 
+    @media screen and (max-width:450px) {
+        #page1-content nav h3{
+            font-size: 2vh;
+            padding-top: 2.5vh;
+        }
+        #page1-content nav h4{
+            font-size: 2vh;
+            padding-top: 2.5vh;
+        }
+        .first_part_menu{
+            height: 22vh;
+            width: 37vh;
+        }
+        .menu_second_part{
+            flex-direction: column;
+         padding-left: 0rem;
+         padding-right: 0rem;
+        }
+        
+
+        .second_part_menu{
+            display: flex;
+        }
+
+        .second_part_menu>li{
+            padding: .5rem .2rem;
+        }
+
+        #menu>hr{
+            margin-top: 0rem;
+        }
+        .menu_lower_part>h1{
+            font-size: 2.8vw;
+        }
+
+        #menu>nav{
+            font-size: 4vw;
+        }
+
+      
+    }
+
