--- a/contact.css
+++ b/contact.css
@@ -480,7 +480,9 @@ nav>h4{
          padding-right: 0rem;
         }
         
-
+        .second_part_menu li{
+            font-size: 2.3vh;
+        }
         .second_part_menu{
             display: flex;
         }
@@ -495,10 +497,16 @@ nav>h4{
         .menu_lower_part>h1{
             font-size: 2.8vw;
         }
+        .menu_lower_part h1{
+           margin-top: -1%;
+        }
 
-        #menu>nav{
+        #menu h1{
             font-size: 4vw;
         }
+        #menu>nav{
+            font-size: 4vw;
+        } 
 
       
     }
